# gsl

./: .bzrignore  .cvsignore  .gitignore  AUTHORS  BUGS  ChangeLog  DONE  GSL.txt  HACKING  INSTALL  KNOWN-PROBLEMS  MACHINES  Makefile.am  Makefile.in  NEWS  NOTES  README  SUPPORT  THANKS  TODO  VOLUNTEERS  acconfig.h  aclocal.m4  appveyor.yml  autogen.sh  build.h  complex_internal.h  config.h.in  configure  configure.ac  configure.in  gsl-config.in  gsl-histogram.c  gsl-randist.c  gsl.m4  gsl.pc.in  gsl.spec  gsl.spec.in  gsl_complex.h  gsl_config.h  (+21 more)
blas/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  NOTES  TODO  blas.c  blas_native_generic.c  blas_raw_cblas.c  blas_raw_cblas_cm.c  blas_raw_generic.c  blas_raw_native.c  blas_raw_native_L23_source.c  blas_raw_native_cm.c  gsl_blas.h  gsl_blas_native.h  gsl_blas_raw.h  gsl_blas_raw_L1.h  gsl_blas_raw_L2.h  gsl_blas_raw_L3.h  gsl_blas_raw_cm.h  gsl_blas_types.h  gsl_cblas.h  matrix_access.h  source_asum_c.h  source_asum_r.h  source_axpy_c.h  source_axpy_r.h  source_copy_c.h  source_copy_r.h  source_dot_c.h  source_dot_r.h  source_gbmv_c.h  source_gbmv_r.h  source_gemv.h  source_gemv_c.h  source_gemv_r.h  source_ger.h  source_gerc.h  source_geru.h  (+37 more)
block/: .cvsignore  ChangeLog  Makefile.am  block.c  block_source.c  file.c  fprintf_source.c  fwrite_source.c  gsl_block.h  gsl_block_char.h  gsl_block_complex.h  gsl_block_complex_double.h  gsl_block_complex_float.h  gsl_block_complex_long_double.h  gsl_block_double.h  gsl_block_float.h  gsl_block_int.h  gsl_block_long.h  gsl_block_long_double.h  gsl_block_short.h  gsl_block_uchar.h  gsl_block_uint.h  gsl_block_ulong.h  gsl_block_ushort.h  gsl_check_range.h  init.c  init_source.c  test.c  test_complex_io.c  test_complex_source.c  test_io.c  test_source.c
complex/: ChangeLog  Makefile.am  TODO  gsl_complex.h  gsl_complex_math.h  inline.c  math.c  poly.c  results.h  results1.h  test.c  test.el
dht/: .cvsignore  ChangeLog  Makefile.am  dht.c  dht_transform.c  gsl_dht.h  test.c  test_dht.c
diff/: ChangeLog  Makefile.am  diff.c  gsl_diff.h  test.c
doc/: .cvsignore  .gitignore  12-cities.eps  ChangeLog  Makefile.am  Makefile.in  TODO  autoconf.texi  blas.texi  bspline.eps  bspline.rst  bspline.texi  bugs.texi  cblas.texi  cheb.texi  combination.texi  complex.texi  conf.py  const.texi  debug.texi  dht.texi  diff.texi  dwt.texi  eigen.texi  err.texi  fdl.texi  fft.texi  fftalgorithms.bib  fftalgorithms.tex  filter.rst  final-route.eps  fit-exp.eps  fitting.texi  gpl.texi  gsl-design.texi  gsl-histogram.1  gsl-randist.1  gsl-ref.info  gsl-ref.texi  gsl.3  (+138 more)
eigen/: ChangeLog  Makefile.am  eigen_sort.c  francis.c  gen.c  genherm.c  genhermv.c  gensymm.c  gensymmv.c  genv.c  gsl_eigen.h  herm.c  hermv.c  jacobi.c  nonsymm.c  nonsymmv.c  qrstep.c  schur.c  sort.c  subrowcol.c  subrowcol_source.c  symm.c  symmv.c  test.c  testgen.c  testgen2.c  testnonsymm.c  testunsymm.c  testunsymm2.c  unsymm.c  unsymmv.c
err/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  env.c  errno.c  error.c  gsl_errno.h  gsl_message.h  gsl_test.h  message.c  stream.c  strerror.c  test.c  test_errnos.c  test_results.c  warn.c
fft/: ChangeLog  Makefile  Makefile.am  Makefile.am-1.0  Makefile.am-1.1  Makefile.am-1.1~  Makefile.in  TODO  autotest.c  autotest.h  benchmark.c  bitreverse.c  bitreverse.h  c.c  c_float.c  c_init.c  c_main.c  c_pass.h  c_pass_2.c  c_pass_3.c  c_pass_4.c  c_pass_5.c  c_pass_6.c  c_pass_7.c  c_pass_n.c  c_radix2.c  compare.c  compare.h  compare_source.c  complex.c  complex.cc  complex_init.c  complex_pass_2.c  complex_pass_3.c  complex_pass_4.c  complex_pass_5.c  complex_pass_6.c  complex_pass_7.c  complex_pass_n.c  complex_radix2.c  (+71 more)
filter/: Makefile.am  gaussian.c  gsl_filter.h  impulse.c  rmedian.c  test.c  test_gaussian.c  test_rmedian.c
fit/: Makefile.am  gsl_fit.h  linear.c  multiple.c  test.c
histogram/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  add.c  add2d.c  calloc_range.c  calloc_range2d.c  copy.c  copy2d.c  file.c  file2d.c  find.c  find2d.c  get.c  get2d.c  gsl-histogram.c  gsl_histogram.h  gsl_histogram2d.h  init.c  init2d.c  maxval.c  maxval2d.c  oper.c  oper2d.c  params.c  params2d.c  pdf.c  pdf2d.c  reset.c  reset2d.c  stat.c  stat2d.c  test.c  test1d.c  test1d_resample.c  test1d_trap.c  test2d.c  test2d_resample.c  test2d_trap.c  (+3 more)
ieee-utils/: ChangeLog  Makefile.am  Makefile.in  NOTES  demo.c  endian.c  env.c  fp-aix.c  fp-darwin.c  fp-env.c  fp-gnuc99.c  fp-gnum68k.c  fp-gnuppc.c  fp-gnusparc.c  fp-gnux86.c  fp-hpux.c  fp-hpux11.c  fp-irix.c  fp-linux.c  fp-m68klinux.c  fp-mode.c  fp-netbsd.c  fp-openbsd.c  fp-solaris.c  fp-sparclinux.c  fp-sunos4.c  fp-tru64.c  fp-unknown.c  fp-x86linux.c  fp.c  gsl_ieee_utils.h  ieee_utils.h  make_rep.c  print-ieee.c  print.c  read-mode-string.c  read.c  standardize.c  test.c
integration/: ChangeLog  Makefile.am  Makefile.in  NOTES  TODO  append.c  cquad.c  err.c  err.h  fixed.c  glfixed.c  gsl_integration.h  hermite.c  initialise.c  integration.c  integration.h  laguerre.c  max.h  partition.c  ptsort.c  qag.c  qag_impl.c  qage.c  qage_impl.c  qagi.c  qagil.c  qagiu.c  qago.c  qagp.c  qagp_impl.c  qags.c  qags_impl.c  qagse.c  qagse_impl.c  qawc.c  qawc_impl.c  qawf.c  qawo.c  qaws.c  qc25c.c  (+30 more)
interpolation/: ChangeLog  Makefile.am  Makefile.in  TODO  accel.c  akima.c  bicubic.c  bilinear.c  bsearch.c  bsearch.h  cspline.c  demo.c  gsl_interp.h  gsl_interp2d.h  gsl_spline.h  gsl_spline2d.h  integ_eval_macro.h  interp.c  interp2d.c  iter.c  linear.c  poly.c  spline.c  spline2d.c  steffen.c  test.c  test.m  test2d.c  test_interp.c  tridiag.c  tridiag.h
linalg/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  TODO  apply_givens.c  balance.c  balancemat.c  bidiag.c  cholesky.c  cholesky_band.c  choleskyc.c  cod.c  eigen_sort.c  exponential.c  givens.c  gsl_linalg.h  hermtd.c  hessenberg.c  hesstri.c  hh.c  householder.c  householdercomplex.c  inline.c  invtri.c  ldlt_band.c  linalg_simple.c  lq.c  lu.c  luc.c  matrix.c  mcholesky.c  multiply.c  norm.c  pcholesky.c  permut.c  ptlq.c  qr.c  qr_td.c  qr_tt.c  (+17 more)
min/: demo.c  (+14 more)
(+1958 files in other folders)
