pkginclude_HEADERS = gsl_complex.h

# noinst_LTLIBRARIES = libgslcomplex.la 

# INCLUDES= -I$(top_builddir)

# libgslcomplex_la_SOURCES = 
# noinst_HEADERS = balance.c companion.c norm.c qr.c

# TESTS = test
# check_PROGRAMS = test

# test_SOURCES = test.c test_complex.c test.h
# test_LDADD = libgslcomplex.la ../err/libgslerr.la ../err/libgsltest.la ../utils/libutils.la
# test_DEPENDENCIES = libgslcomplex.la
