## Process this file with automake to produce Makefile.in

info_TEXINFOS = gsl-ref.texi
noinst_TEXINFOS = gsl-design.texi
gsl_ref_TEXINFOS = err.texi fft.texi random.texi roots.texi roots-high.texi roots-low.texi statistics.texi specfunc.texi siman.texi vectors.texi debug.texi histogram.texi integration.texi ieee754.texi montecarlo.texi

noinst_DATA = siman-test.eps siman-energy.eps 12-cities.eps \
	initial-route.eps final-route.eps \
	fft-complex-radix2-f.eps fft-complex-radix2-t.eps \
	fft-complex-radix2.eps fft-real-mixedradix.eps \
	roots-bisection.eps roots-false-position.eps \
	roots-newtons-method.eps roots-secant-method.eps \
	histogram.eps histogram2d.eps

EXTRA_DIST = siman-test.eps siman-energy.eps 12-cities.eps \
	initial-route.eps final-route.eps \
	fftalgorithms.tex fftalgorithms.bib \
	algorithm.sty algorithmic.sty calc.sty \
	fft-complex-radix2-f.eps fft-complex-radix2-t.eps \
	fft-complex-radix2.eps fft-real-mixedradix.eps \
	roots-bisection.eps roots-false-position.eps \
	roots-newtons-method.eps roots-secant-method.eps \
	histogram.eps histogram2d.eps \
	rand-beta.tex rand-binomial.tex rand-cauchy.tex rand-chisq.tex \
	rand-erlang.tex rand-exponential.tex rand-fdist.tex rand-flat.tex \
	rand-gamma.tex rand-gaussian.tex rand-geometric.tex rand-laplace.tex \
	rand-logistic.tex rand-lognormal.tex rand-pareto.tex rand-poisson.tex \
	rand-tdist.tex rand-weibull.tex randplots.gnp

