## Process this file with automake to produce Makefile.in

info_TEXINFOS = gsl-ref.texi
noinst_TEXINFOS = gsl-design.texi
gsl_ref_TEXINFOS = err.texi min.texi fft.texi rng.texi randist.texi roots.texi statistics.texi specfunc.texi specfunc-airy.texi specfunc-bessel.texi specfunc-chebyshev.texi specfunc-clausen.texi specfunc-coulomb.texi specfunc-coupling.texi specfunc-dawson.texi specfunc-debye.texi specfunc-dilog.texi specfunc-elementary.texi specfunc-ellint.texi specfunc-elljac.texi specfunc-erf.texi specfunc-exp.texi specfunc-expint.texi specfunc-fermi-dirac.texi specfunc-gamma.texi specfunc-gegenbauer.texi specfunc-hyperg.texi specfunc-laguerre.texi specfunc-legendre.texi specfunc-log.texi specfunc-poly.texi specfunc-pow-int.texi specfunc-psi.texi specfunc-result.texi specfunc-synchrotron.texi specfunc-transport.texi specfunc-trig.texi specfunc-zeta.texi siman.texi vectors.texi debug.texi histogram.texi integration.texi ieee754.texi montecarlo.texi sum.texi usage.texi dht.texi interp.texi poly.texi

noinst_DATA = siman-test.eps siman-energy.eps 12-cities.eps \
	initial-route.eps final-route.eps \
	fft-complex-radix2-f.eps fft-complex-radix2-t.eps \
	fft-complex-radix2.eps fft-real-mixedradix.eps \
	roots-bisection.eps roots-false-position.eps \
	roots-newtons-method.eps roots-secant-method.eps \
	histogram.eps histogram2d.eps min-interval.eps

EXTRA_DIST = siman-test.eps siman-energy.eps 12-cities.eps \
	initial-route.eps final-route.eps \
	fftalgorithms.tex fftalgorithms.bib \
	algorithm.sty algorithmic.sty calc.sty \
	fft-complex-radix2-f.eps fft-complex-radix2-t.eps \
	fft-complex-radix2.eps fft-real-mixedradix.eps \
	roots-bisection.eps roots-false-position.eps \
	roots-newtons-method.eps roots-secant-method.eps \
	histogram.eps histogram2d.eps min-interval.eps \
	rand-beta.tex rand-binomial.tex rand-cauchy.tex rand-chisq.tex \
	rand-erlang.tex rand-exponential.tex rand-fdist.tex rand-flat.tex \
	rand-gamma.tex rand-gaussian.tex rand-geometric.tex rand-laplace.tex \
	rand-logarithmic.tex rand-logistic.tex rand-lognormal.tex \
        rand-pareto.tex rand-poisson.tex \
	rand-hypergeometric.tex rand-nbinomial.tex \
	rand-bivariate-gaussian.tex rand-rayleigh.tex rand-rayleigh-tail.tex \
	rand-tdist.tex rand-weibull.tex random-walk.tex randplots.gnp \
	rand-exppow.tex rand-levy.tex rand-gumbel.tex rand-bernoulli.tex \
	rand-gaussian-tail.tex rand-gumbel1.tex rand-gumbel2.tex

